--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
 <h1 class="myName">
   Madhav <span class="transparentText">Acharya</span>
 </h1>
-<p class="myJob">
-  UI/UX & Graphic Designer
+<p class="typewriter">
+  <!-- UI/UX & Graphic Designer -->
 </p>
 <div class="mySocials">
 <ul>
   <li>
-    <i class='bx bxl-facebook-circle'></i>
-    <i class='bx bxl-instagram' ></i>
-    <i class='bx bxl-linkedin-square' ></i>
-    <i class='bx bxl-figma' ></i>
-    <i class='bx bxl-twitter' ></i>
-    <i class='bx bxl-behance' ></i>
+    <a href="#"><i class='bx bxl-facebook-circle'></i></a>
+    <a href="#"><i class='bx bxl-instagram' ></i></a>
+    <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
+    <a href="#"><i class='bx bxl-figma' ></i></a>
+    <a href="#"><i class='bx bxl-twitter' ></i></a>
+    <a href="#"><i class='bx bxl-behance' ></i></a>
   </li>
 </ul>
 </div>
@@ -54,10 +54,15 @@
 <img src="./img/heroImageBackground.png" alt="myImageBackground" />
     </div>
   </section>
-  <div class="clouds"></div>
+  <div class="clouds">
+  </div>
+  <section class="me">
+    <img src="./img/aboutMe.png" alt=""/>
+    <img src="./img/myProfile.png" alt=""/>
+  </section>
   <section class="about" id="about">
 <div class="aboutLeft">
-  <p class="aboutme">About me</p>
+  <!-- <p class="aboutme">About me</p> -->
   <p class="why">
     Why you <span class="colorOrange">hire me</span> for your <span class="colorBlue">next project</span>?
   </p>
@@ -261,7 +266,20 @@
     </div>
 </section>
 <footer>
-  
+  <p class="myName">Madhav <span class="transparentText">Acharya</span></p>
+  <div class="footerSocialsLink">
+    <ul>
+      <li>
+        <a href="#"><i class='bx bxl-facebook-circle'></i></a>
+        <a href="#"><i class='bx bxl-instagram' ></i></a>
+        <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
+        <a href="#"><i class='bx bxl-figma' ></i></a>
+        <a href="#"><i class='bx bxl-twitter' ></i></a>
+        <a href="#"><i class='bx bxl-behance' ></i></a>
+      </li>
+    </ul>
+  </div>
+  <p class="copyright">Copyright &copy;2024- Madhav Acharya. All rights reserved.</p>
 </footer>
   <script src="./script.js"></script>
 </body>
