--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li><a href="#hero">Home</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#portfolio">Portfolio</a></li>
-      <li>  <a href="#contact">Contact</a></li>
+      <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
     <button class="hireBtn"><a href="mailto:">Hire Me</a></button>
@@ -46,6 +46,10 @@
     <a href="#"><i class='bx bxl-behance' ></i></a>
   </li>
 </ul>
+</div>
+<div class="heroBtn">
+  <button class="downloadCV"><a href="#">Download CV</a></button>
+  <a href="#">Let's Talk</a>
 </div>
     </div>
     <div class="heroImage">
@@ -107,7 +111,7 @@
   </div>
 
   <div class="myWork">
-    <img src="./img/mobile ui ux design.svg" alt="">
+    <img src="./img/graphic design.svg" alt="">
     <div class="myWorkInfo">
 <h1>Graphic Design</h1>
 <p>
@@ -124,8 +128,8 @@
 </div>
   </section>
 <div class="aboutBottomDesign">
-  <img src="./img/dfgdg 1.png" alt="">
-  <img src="./img/dfgdg 2.png" alt="">
+  <img src="./img/BottomLeftDesign.svg" alt=""/>
+  <img src="./img/BottomRightDesign.svg" alt=""/>
 </div>
 <section class="portfolio" id="portfolio">
   <div class="portfolioLeft">
@@ -141,7 +145,7 @@
     <img src="./img/portfolio1.png " alt="">
     <div class="overlay">
       <p>Web UI Design</p>
-      <p><a href="#">View Works</a></p>
+      <p><a href="#">View Works </a><i class='bx bxs-right-arrow'></i></p>
     </div>
   </div>
 </div>
@@ -156,7 +160,7 @@
       <img src="./img/portfolio2.png " alt="">
       <div class="overlay">
         <p>Web UI Design</p>
-        <p><a href="#">View Works</a></p>
+        <p><a href="#">View Works</a><i class='bx bxs-right-arrow'></i></p>
       </div>
     </div>
   </div>
@@ -166,7 +170,7 @@
       <img src="./img/portfolio2.png " alt="">
       <div class="overlay">
         <p>Web UI Design</p>
-        <p><a href="#">View Works</a></p>
+        <p><a href="#">View Works</a><i class='bx bxs-right-arrow'></i></p>
       </div>
     </div>
   </div>
