--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
 <p class="greet">
   Hello, I'm
 </p>
-<h1 class="myName">
-  Madhav <span class="transparentText">Acharya</span>
-</h1>
+<h1 class="transparentText">
+<span class="myName">
+  Madhav
+</span>
+Acharya</h1>
 <p class="typewriter">
   <!-- UI/UX & Graphic Designer -->
 </p>
@@ -68,7 +70,7 @@
 <div class="aboutLeft">
   <!-- <p class="aboutme">About me</p> -->
   <p class="why">
-    Why you <span class="colorOrange">hire me</span> for your <span class="colorBlue">next project</span>?
+    Why you <span class="colorOrange">hire me</span> for your <span class="colorBlue">next</span> <span class="colorBlue">project</span>?
   </p>
 <p class="aboutDescription">
   I'm a highly skilled UI/UX and graphic designer with a passion for creating engaging user experiences. I have experience in all stages of the design process, from user research and wireframing to prototyping and final design. I am highly skilled in using design software such as Sketch, Adobe Creative Suite, and Figma to bring designs to life.
@@ -269,8 +271,31 @@
    </div>
     </div>
 </section>
+<section class="form-wrap" id="contact">
+  <form action="#" method="POST">
+      <h2 class="form-title">Send us a message</h2>
+      <div class="form-fields">
+          <div class="form-group">
+              <input type="text" class="fname" placeholder="First Name:">
+          </div>
+          <div class="form-group">
+              <input type="text" class="lname" placeholder="Last Name:">
+          </div>
+          <div class="form-group">
+              <input type="email" class="email" placeholder="Email:">
+          </div>
+          <div class="form-group">
+              <input type="number" class="phone" placeholder="Phone:">
+          </div>
+          <div class="form-group">
+              <textarea name="message" id="" placeholder="Write your message"></textarea>
+          </div>
+      </div>
+      <input type="submit" value="Send Message" class="submit-button">
+  </form>
+</section>
 <footer>
-  <p class="myName">Madhav <span class="transparentText">Acharya</span></p>
+  <h1 class="transparentText"><span class="myName">Madhav </span>Acharya</h1>
   <div class="footerSocialsLink">
     <ul>
       <li>
