--- a/index.html
+++ b/index.html
@@ -272,26 +272,26 @@ Acharya</h1>
     </div>
 </section>
 <section class="form-wrap" id="contact">
-  <form action="#" method="POST">
+  <form id="myForm">
       <h2 class="form-title">Send us a message</h2>
       <div class="form-fields">
           <div class="form-group">
-              <input type="text" class="fname" placeholder="First Name:">
+              <input type="text" class="fname" placeholder="First Name:" oninput="capitalizeFirstLetter(this)" required>
           </div>
           <div class="form-group">
-              <input type="text" class="lname" placeholder="Last Name:">
+              <input type="text" class="lname" placeholder="Last Name:" oninput="capitalizeFirstLetter(this)" required>
           </div>
           <div class="form-group">
-              <input type="email" class="email" placeholder="Email:">
+              <input type="email" class="email" placeholder="Email:" required>
           </div>
           <div class="form-group">
-              <input type="number" class="phone" placeholder="Phone:">
+              <input type="number" class="phone" placeholder="Phone:" pattern="[0-9]{10}" required>
           </div>
           <div class="form-group">
-              <textarea name="message" id="" placeholder="Write your message"></textarea>
+              <textarea name="message" id="" placeholder="Write your message" required></textarea>
           </div>
       </div>
-      <input type="submit" value="Send Message" class="submit-button">
+      <input type="submit" value="Send Message" class="submit-button" onclick="validateForm()">
   </form>
 </section>
 <footer>
